[Foundation] Refactor environment runtime lifecycle (#36)
Restack the environment refactor on the squash-merged main branch, preserve the hardened topology boundary, and isolate runtime lifecycle state and failure construction.